Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}

Table users as U {
  username text [pk]
  role text [not null, default: 'depositor']
  hashed_password text [not null]
  full_name text [not null]
  email text [not null, unique]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [default: `now()`, not null]
}

Table verify_emails {
    id bigserial [pk]
    username text [ref: > U.username, not null]
    email text [not null]
    secret_code text [not null]
    is_used bool [not null, default: false]
    expires_at timestamptz [not null, default: `now() + interval '15 minutes'`]
    created_at timestamptz [not null, default: `now()`]
}

Table accounts as A {
  id bigserial [pk]
  owner text [not null, ref: > U.username]
  balance bigint [not null]
  currency text [not null]
  created_at timestamptz [default: `now()`, not null]

  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestamptz [default: `now()`, not null]

  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [default: `now()`, not null]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions {
  id uuid [pk]
  username text [not null, ref: > users.username]
  refresh_token text [not null]
  client_ip text [not null]
  user_agent text [not null]
  is_blocked bool [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [default: `now()`, not null]
}
